Ajustes na documentacao e testes unitário
